# cli-toolbox

./: Cargo.toml
src/: cli.rs  main.rs
src/toolkit/: mod.rs  uuid.rs
