[package]
name = "cli-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
lazy_static = "1.4.0"
mac_address = "1.1.3"
serde = { version = "1.0.137", features = ["derive"] }
tabled = { version = "0.6.1", features = ["color"] }
uuid = { version = "1.0.0", features = ["v4", "serde", "v1"] }
